вот вот закончу , осталось дописать чуть тестов